# Project_AVMStitch_Saturn

./: CMakeLists.txt  package.xml
cmake/: FindFFmpeg.cmake  Findlibyuv.cmake
config/: camera_param.yaml  camera_param_remote.yaml  config.yaml  result.yaml
include/: avmstitch_node.h
include/common/: common.h  common_type.hpp  image.h
include/decode/: video_decoder_h26x_base.h  video_decoder_h26x_cpu.h  video_decoder_h26x_cuda.h
include/encode/: video_encoder_h26x_base.h  video_encoder_h26x_cpu.h  video_encoder_h26x_cuda.h
include/image/: image_convert.hpp
include/stitching/: avm_stitching.h  avm_stitching_interface.h
include/stream/: video_push.h
include/video/: rtsp_client.h
launch/: avmstitch.launch.py
src/: avmstitch_node.cpp
src/common/: image.cpp
src/decode/: video_decoder_h26x_base.cpp  video_decoder_h26x_cpu.cpp  video_decoder_h26x_cuda.cpp
src/encode/: video_encoder_h26x_base.cpp  video_encoder_h26x_cpu.cpp  video_encoder_h26x_cuda.cpp
src/stitching/: avm_stitching.cpp  avm_stitching_interface.cpp
src/stream/: video_push.cpp
src/video/: rtsp_client.cpp
